Adding in creation of subscription flow, plus some refactoring
